--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -10,8 +10,8 @@
 \renewcommand{\lnot}{\ordsim}
 \newcommand{\lxor}{\oplus}
 \newcommand{\lnand}{\barwedge}
-\newcommand{\divs}{\mid}
-\newcommand{\ndivs}{\nmid}
+\newcommand{\divs}{\mathrel{\mid}}
+\newcommand{\ndivs}{\mathrel{\nmid}}
 \def\contra{\tikz[baseline, x=0.22em, y=0.22em, line width=0.032em]\draw (0,2.83)--(2.83,0) (0.71,3.54)--(3.54,0.71) (0,0.71)--(2.83,3.54) (0.71,0)--(3.54,2.83);}
 
 \newcommand{\On}{\mathrm{On}} % ordinals
@@ -32,6 +32,7 @@
 \DeclareMathOperator{\Mor}{Mor} % morphisms
 \DeclareMathOperator{\End}{End} % endomorphism
 \DeclareMathOperator{\Span}{span}
+\newcommand{\Mod}{\mathbin{\mathrm{mod}}}
 
 \newcommand{\eps}{\epsilon}
 \newcommand{\veps}{\varepsilon}
@@ -73,8 +74,9 @@
 \newcommand{\st}{\strut}
 \newcommand{\dps}[1]{\displaystyle{#1}}
 
-\newcommand{\sol}{\setlength{\parindent}{0cm}\textbf{\textit{Solution:}}\setlength{\parindent}{1cm} }
-\newcommand{\solve}[1]{\setlength{\parindent}{0cm}\textbf{\textit{Solution: }}\setlength{\parindent}{1cm}#1 \Qed}
+\newcommand{\sol}{\textbf{\textit{Solution:}} }
+\newcommand{\solve}[1]{\textbf{\textit{Solution: }} #1 \qed}
+% \newcommand{\proof}{\underline{\textit{proof:}}\\}
 
 \DeclareMathOperator{\sech}{sech}
 \DeclareMathOperator{\csch}{csch}
@@ -113,8 +115,8 @@
 \newcommand{\braces}[1]{\lbr #1 \rbr}
 \newcommand{\sqbracks}[1]{\lsb #1 \rsb}
 \renewcommand{\abs}[1]{\left| #1 \right|}
-\renewcommand{\floor}[1]{\lfloor #1 \rfloor}
-\renewcommand{\ceil}[1]{\lceil #1 \rceil}
+\renewcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
+\renewcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
 \newcommand{\suchthat}{\medspace\middle|\medspace}
 
 \newcommand{\cd}{\cdot}
@@ -133,8 +135,17 @@
 \newcommand{\QED}{\hfill \qed}
 \newcommand{\CONTRA}{\hfill \contra}
 
-\renewcommand{\dd}[1]{\frac{d}{d#1}}
-\newcommand{\dyd}[2][y]{\frac{d#1}{d#2}}
+\newcommand{\ihat}{\hat{\imath}}
+\newcommand{\jhat}{\hat{\jmath}}
+\newcommand{\khat}{\hat{k}}
+
+
+\newcommand{\grad}{\nabla}
+\newcommand{\D}{\Delta}
+\renewcommand{\d}{\mathrm{d}}
+
+\renewcommand{\dd}[1]{\frac{\d}{\d #1}}
+\newcommand{\dyd}[2][y]{\frac{\d #1}{\d #2}}
 
 \newcommand{\ddx}{\dd{x}}       \newcommand{\ddxsq}{\dyd[^2]{x^2}}
 \newcommand{\ddy}{\dd{y}}       \newcommand{\ddysq}{\dyd[^2]{y^2}}
@@ -147,9 +158,9 @@
 \newcommand{\dvdx}{\dyd[v]{x}}  \newcommand{\dvdxsq}{\dyd[^2v]{x^2}}
 
 \newcommand{\del}[2]{\frac{\partial #1}{\partial #2}}
-\newcommand{\Del}[3]{\frac{\partial^{#1} #2}{\partial^{#1} #3}}
+\newcommand{\Del}[3]{\frac{\partial^{#1} #2}{\partial #3^{#1}}}
 \newcommand{\deld}[2]{\dfrac{\partial #1}{\partial #2}}
-\newcommand{\Deld}[3]{\dfrac{\partial^{#1} #2}{\partial^{#1} #3}}
+\newcommand{\Deld}[3]{\dfrac{\partial^{#1} #2}{\partial #3^{#1}}}
 
 \newcommand{\argument}[2]{
   \begin{array}{rll}
