--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[tmargin=2cm,rmargin=1in,lmargin=1in,margin=0.85in,bmargin=2cm,footskip=.2in]{geometry}
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
-\allowdisplaybreaks[1]
+\allowdisplaybreaks
 \usepackage{undertilde}
 \usepackage{xfrac}
 \usepackage[makeroom]{cancel}
@@ -73,6 +73,7 @@
 		tabsize						= 4,
 }
 
+\definecolor{stringyellow}{RGB}{227, 78, 48}
 %% 
 %% Shamelessly stolen from Vivi on Stackoverflow
 %% https://tex.stackexchange.com/questions/75116/what-can-i-use-to-typeset-matlab-code-in-my-document
@@ -85,10 +86,11 @@
     keywordstyle=\color{blue},%
     morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
     identifierstyle=\color{black},%
-    stringstyle=\color{mylilas},
+    stringstyle=\color{stringyellow},
     commentstyle=\color{commentgreen},%
     showstringspaces=false,%without this there will be a symbol in the places where there is a space
     numbers=left,%
+		firstnumber=1,
     % numberstyle={\tiny \color{black}},% size of the numbers
     % numbersep=9pt, % this defines how far the numbers are from the text
     emph=[1]{for,end,break},emphstyle=[1]\color{red}, %some words to emphasise
