--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -41,6 +41,7 @@
 \newcommand{\wt}{\widetilde}
 \newcommand{\wh}{\widehat}
 \newcommand{\ut}{\utilde}
+\newcommand{\emp}{\varnothing}
 
 \newcommand{\vocab}[1]{\textbf{\color{blue} #1}}
 \providecommand{\half}{\frac{1}{2}}
@@ -105,6 +106,13 @@
 \newcommand{\lnx}{\ln x}
 \newcommand{\expx}{\exp x}
 
+\newcommand{\Theom}{\textbf{Theorem. }}
+\newcommand{\Lemma}{\textbf{Lemma. }}
+\newcommand{\Corol}{\textbf{Corollary. }}
+\newcommand{\Remar}{\textit{Remark. }}
+\newcommand{\Defin}[1]{\textbf{Definition} (#1).}
+\newcommand{\Claim}{\textbf{Claim. }}
+
 \newcommand{\lb}{\left(}
 \newcommand{\rb}{\right)}
 \newcommand{\lbr}{\left\lbrace}
@@ -113,11 +121,11 @@
 \newcommand{\rsb}{\right]}
 \newcommand{\bracks}[1]{\lb #1 \rb}
 \newcommand{\braces}[1]{\lbr #1 \rbr}
+\newcommand{\suchthat}{\medspace\middle|\medspace}
 \newcommand{\sqbracks}[1]{\lsb #1 \rsb}
 \renewcommand{\abs}[1]{\left| #1 \right|}
 \renewcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \renewcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
-\newcommand{\suchthat}{\medspace\middle|\medspace}
 
 \newcommand{\cd}{\cdot}
 \newcommand{\tf}{\therefore}
