latex_template updates

--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -41,6 +41,7 @@
 \newcommand{\wt}{\widetilde}
 \newcommand{\wh}{\widehat}
 \newcommand{\ut}{\utilde}
+\newcommand{\unit}[1]{\ut{\hat{#1}}}
 \newcommand{\emp}{\varnothing}
 
 \newcommand{\vocab}[1]{\textbf{\color{blue} #1}}
@@ -124,6 +125,7 @@
 \newcommand{\suchthat}{\medspace\middle|\medspace}
 \newcommand{\sqbracks}[1]{\lsb #1 \rsb}
 \renewcommand{\abs}[1]{\left| #1 \right|}
+\newcommand{\Mag}[1]{\left|\left| #1 \right|\right|}
 \renewcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \renewcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
 
@@ -131,6 +133,8 @@
 \newcommand{\tf}{\therefore}
 \newcommand{\Let}{\text{Let }}
 \newcommand{\Given}{\text{Given }}
+% \newcommand{\and}{\text{and }}
+\newcommand{\Substitute}{\text{Substitute }}
 \newcommand{\Suppose}{\text{Suppose }}
 \newcommand{\WeSee}{\text{We see }}
 \newcommand{\So}{\text{So }}
@@ -146,7 +150,6 @@
 \newcommand{\ihat}{\hat{\imath}}
 \newcommand{\jhat}{\hat{\jmath}}
 \newcommand{\khat}{\hat{k}}
-
 
 \newcommand{\grad}{\nabla}
 \newcommand{\D}{\Delta}
