--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -33,6 +33,9 @@
 \usepackage{pdfpages}
 \usepackage{svg}
 \usepackage{transparent}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usetikzlibrary{calc}
 
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
 \SetCommentSty{mycommfont}
